# MJava-Compiler

./: .gitignore  CMakeLists.txt  README.md
Parser/: CMakeLists.txt  main.cpp
Parser/doc/: README.md
Parser/parser/: parser.cpp  parser.h  syntax_tree_node.cpp  syntax_tree_node.h
Scanner/: CMakeLists.txt  main.cpp
Scanner/doc/: README.md
Scanner/doc/test/专用符号/: test6_token.txt  test6_token_error.txt  test7_token.txt  test7_token_error.txt
Scanner/doc/test/关键字/: test3_token.txt  test3_token_error.txt  test4_token.txt  test4_token_error.txt
Scanner/doc/test/整数/: test5_token.txt  test5_token_error.txt
Scanner/doc/test/标识符/: test1_token.txt  test1_token_error.txt  test2_token.txt  test2_token_error.txt
Scanner/doc/test/自定义测试方案/: test8_token.txt  test8_token_error.txt
Scanner/doc/自定义测试方案/: test8.txt  测试方案.md
Scanner/scanner/: dfa_state.h  scanner.cpp  scanner.h
Scanner/utils/: error_msg_builder.h  mjava_utils.cpp  mjava_utils.h
Utils/utils/: error_msg_builder.h  mjava_utils.cpp  mjava_utils.h  syntax_type.h  token_type.h
